foundations/aws/us-east-2/sandbox/aegershman-example-0/cluster/build/prometheus-operator/build/config/opsfiles/alertmanager-virtual-service.yml
---
apiVersion: networking.istio.io/v1alpha3
kind: VirtualService
metadata:
  name: alertmanager-virtual-service
  namespace: prometheus-operator
spec:
  hosts:
    - alertmanager.cf.gershman.io
  gateways:
    - cf-system/istio-ingressgateway
  http:
    - route:
        - destination:
            host: prometheus-operator-alertmanager.prometheus-operator.svc.cluster.local
            port:
              number: 9093
